Fixing webkit issues on mobile, updating copy.

--- a/assets/sass/modules/_globals.scss
+++ b/assets/sass/modules/_globals.scss
@@ -35,6 +35,7 @@ img {
 .button {
   background-color: $linkColour!important;
   text-transform: uppercase;
+  -webkit-appearance: none!important;
 }
 
 input, textarea {
